--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>App Template</title>
 </head>
 
 <body>
-  <h2>This is a test, yo</h2>
+  <h2>This is a test, yo...yo</h2>
   <h2>Here's how you set up and push to Heroku</h2>
   <ul>
     <li>git init</li>
